refactor(cars) : 자동차 집단에 대한 객체 타입과 구조를 변경
- List<> 타입의 일급 컬렉션으로 변경